Miscellaneous spacing fixes

--- a/_sass/misc/theme-toggle.scss
+++ b/_sass/misc/theme-toggle.scss
@@ -1,8 +1,8 @@
 .theme-toggle {
   position: relative;
-  width: $base-font-size * 7.65;
+  width: $base-font-size * 10;
   margin-top: 10px;
-  margin-right: 60px;
+  margin-right: 40px;
   margin-left: auto;
   transition: .3s cubic-bezier(.4,.03,0,1);
 
