--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -253,7 +253,7 @@ html {
   @extend %flex-1; /* <-- Keep footer on the bottom */
   -ms-flex: none; /* <-- Fix IE footer issue */
   padding: $spacing-unit * 2 0;
-  padding-top: 72px;
+  padding-top: $spacing-unit;
 }
 
 .page-heading {
